# radioconf

./: .hgtags  ChangeLog  FAQ  FT-60R.layout  FT-7800R.layout  FT-857D.layout  FT60-layout.txt  FT60.mem  FT857-layout.txt  Makefile.am  README  TODO  configure.ac  configure.in  kenwood_rw.1  kenwood_rw.c  radio_edit.py.in  yaesu_edit.1  yaesu_edit.in  yaesu_edit.py  yaesu_edit.py.in  yaesu_rw.1  yaesu_rw.c
layouts/: FT-60R.layout  FT-857D.layout  Makefile.am  VX-7R.layout
radioconf/: FT-60R.rad  FT-857D.empty  Makefile.am  TM-V71.rad  VX-7R.empty  VX-7R.rad  radios
radios/: FT-60R.rad  radios
yaesuconf/: FT-60R.empty  FT-60R.rad  FT-7800R.empty  FT-7800R.rad  FT-857D.empty  FT-857D.rad  Makefile.am  RAD_FILES  TM-V71.empty  TM-V71.rad  US.rpt  VX-7R.empty  VX-7R.rad  radios
